[package]
name = "websocket"
version = "0.1.0"
authors = ["Marcin Pajkowski <marcin.pajkowski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
tokio-tungstenite = { git = "https://github.com/mpajkowski/tokio-tungstenite.git", rev = "28ee5c2" }
tungstenite = "0.10"
futures = "0.3"
serde = "1"
serde_json = "1"
anyhow = "1.0"

env_logger = "0.7"
log = "0.4"
dotenv = "0.15"
